--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
     "start": "node server.js"
   },
   "author": "",
@@ -14,5 +14,9 @@
     "express": "^4.18.1",
     "express-flash": "github:RGBboy/express-flash",
     "mongoose": "^6.5.0"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
