--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.1",
     "express-flash": "github:RGBboy/express-flash",
     "mongoose": "^6.5.0"
